--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,6 +17,12 @@
     max-width: 5rem;
   }
 }
+.main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .respond {
   display: flex;
 }
